--- a/OrganizacionCristoVive.html
+++ b/OrganizacionCristoVive.html
@@ -99,57 +99,56 @@
       </tr>
     </tbody>
   </table>
-  <button id="print-button">Imprimir en PDF</button>
+  <button id=“print-button”>Imprimir en PDF</button>
+  <footer>
+    <p>"Texto de cita bíblica"</p>
+    <p>&copy; Equipo que blanco - Cristo Vive Multimedia Confidencial</p>
   </footer>
-      <p>"Texto de cita bíblica"</p>
-      <p>&copy; Equipo que blanco - Cristo Vive Multimedia Confidencial</p>
-    </footer>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.min.js"></script>
-    <script>
-      const currentDateElement = document.getElementById("current-date");
-      const currentDate = new Date().toLocaleDateString("es-ES", {
-        weekday: 'long',
-        year: 'numeric',
-        month: 'long',
-        day: 'numeric'
-      });
-      currentDateElement.textContent = currentDate;
-  
-      // Lógica JavaScript para generar el PDF y registrar el historial
-      const printButton = document.getElementById('print-button');
-      printButton.addEventListener('click', function() {
-        const table = document.querySelector("table");
-        const tableHTML = table.outerHTML;
-        const style = `
-          <style>
-            table {
-              border-collapse: collapse;
-              width: 100%;
-            }
-            th, td {
-              border: 1px solid black;
-              padding: 8px;
-              text-align: left;
-            }
-            th {
-              background-color: #f2f2f2;
-            }
-          </style>
-        `;
-        const html = `${style}${tableHTML}`;
-        const pdf = new jsPDF('p', 'pt', 'a4');
-        pdf.html(html, {
-          callback: function() {
-            pdf.save('organizador_semanal.pdf');
-            const date = new Date().toLocaleString();
-            const history = {
-              date,
-              user: 'Nombre del usuario'
-            };
-            console.log('Historial:', history);
-          }
-        });
-      });
-    </script>
-  </body>
-  </html>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.4.0/jspdf.min.js"></script>
+  <script>
+    const currentDateElement = document.getElementById("current-date");
+    const currentDate = new Date().toLocaleDateString("es-ES", {
+      weekday: 'long',
+      year: 'numeric',
+      month: 'long',
+      day: 'numeric'
+    });
+    currentDateElement.textContent = currentDate;
+    // Lógica JavaScript para generar el PDF y registrar el historial
+    const printButton = document.getElementById('print-button');
+    printButton.addEventListener('click', function() {
+      const table = document.querySelector("table");
+      const tableHTML = table.outerHTML;
+     const style =´
+     <style> 
+        table { 
+          border-collapse: collapse; 
+          width: 100%; 
+ }
+ th, td {
+border: 1px solid black;
+padding: 8px;
+text-align: left;
+}
+th {
+background-color: #f2f2f2;
+  }
+  </style> 
+  ´;
+  const html = `${style}${tableHTML}`;
+  const pdf = new jsPDF('p', 'pt', 'a4');
+  pdf.html(html, {
+    callback: function() {
+    pdf.save('organizador_semanal.pdf');
+    const date = new Date().toLocaleString();
+    const history = {
+      date,
+      user: 'Nombre del usuario'
+    };
+    console.log('Historial:', history);
+  }
+});
+});
+</script> 
+</body> 
+</html>
