--- a/web/OrganizacionCristoVive.html
+++ b/web/OrganizacionCristoVive.html
@@ -2,6 +2,7 @@
 <html>
 <head>
     <title>Organización Semanal - Cristo Vive</title>
+    <link rel="ico" href="<img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">"
     <style>
         table {
             border-collapse: collapse;
@@ -41,7 +42,7 @@
 </head>
 <body>
 <header>
-    <img src="tcvl-121x107.webp" alt="Logo de Cristo Vive">
+    <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
     <h1>Organización Semanal - Cristo Vive</h1>
     <h2>Responsabilidades de Líderes</h2>
     <h3>Archivo Generado el día:</h3>
