--- a/index.html
+++ b/index.html
@@ -39,6 +39,8 @@
             z-index: -1;
         }
     </style>
+    <head>
+ <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
 <header>
