--- a/index.html
+++ b/index.html
@@ -1,115 +1,76 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Organización Semanal - Cristo Vive</title>
-    <link rel="ico" href="<img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">"
-    <style>
-        table {
-            border-collapse: collapse;
-            width: 100%;
-        }
-        th, td {
-            border: 1px solid black;
-            padding: 8px;
-            text-align: left;
-        }
-        th {
-            background-color: #f2f2f2;
-        }
-        #print-button {
-            margin-top: 10px;
-        }
-        header {
-            text-align: center;
-        }
-        footer {
-            margin-top: 20px;
-            text-align: center;
-            font-style: italic;
-        }
-        .watermark {
-            position: fixed;
-            top: 50%;
-            left: 50%;
-            transform: translate(-50%, -50%);
-            opacity: 0.4;
-            font-size: 52px;
-            font-weight: bold;
-            color: rgb(180, 177, 177);
-            z-index: -1;
-        }
-    </style>
-    <head>
- <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Organización Semanal - Cristo Vive</title>
 </head>
 <body>
-<header>
+  <header>
     <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
     <h1>Organización Semanal - Cristo Vive</h1>
     <h2>Responsabilidades de Líderes</h2>
     <h3>Archivo Generado el día:</h3>
-    <h3 id='today'></h3>
-</header>
+    <h3 id="today"></h3>
+  </header>
 
-<table>
+  <table class="table-responsive">
     <thead>
-        <tr>
-            <th>Día</th>
-            <th>Fecha del Servicio</th>
-            <th>Quién dirige</th>
-            <th>Alabanza & Adoracion</th>
-            <th>Meditación de la Palabra</th>
-            <th>Actividad adicional</th>
-            <th>Actividad extraordinaria</th>
-            <th>Horario</th>
-        </tr>
+      <tr>
+        <th>Día</th>
+        <th>Fecha del Servicio</th>
+        <th>Quién dirige</th>
+        <th>Alabanza & Adoracion</th>
+        <th>Meditación de la Palabra</th>
+        <th>Actividad adicional</th>
+        <th>Actividad extraordinaria</th>
+        <th>Horario</th>
+      </tr>
     </thead>
     <tbody>
-        <tr>
-            <td>Martes</td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-        </tr>
-        <tr>
-            <td>Viernes</td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-        </tr>
-        <tr>
-            <td>Sábado</td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-        </tr>
-        <tr>
-            <td>Domingo</td>
-            <tdcontenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            <td contenteditable="true"></td>
-            </tr>
-            </tbody>
-            
-            </table>
-            <footer>
+      <tr>
+        <td>Martes</td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+      </tr>
+      <tr>
+        <td>Viernes</td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+      </tr>
+      <tr>
+        <td>Sábado</td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+      </tr>
+      <tr>
+        <td>Domingo</td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+        <td contenteditable="true"></td>
+      </tr>
+    </tbody>
+  </table>
+  <footer>
                 <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
                 <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial</p>
             </footer>
