--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <table class="table-responsive">
     <thead>
       <tr>
-        <th>Día</th>
-        <th>Fecha del Servicio</th>
-        <th>Quién dirige</th>
-        <th>Alabanza & Adoracion</th>
-        <th>Meditación de la Palabra</th>
-        <th>Actividad adicional</th>
-        <th>Actividad extraordinaria</th>
-        <th>Horario</th>
+        <th style="text-align:center;">Día</th>
+        <th style="text-align:center;">Fecha del Servicio</th>
+        <th style="text-align:center;">Quién dirige</th>
+        <th style="text-align:center;">Alabanza & Adoracion</th>
+        <th style="text-align:center;">Meditación de la Palabra</th>
+        <th style="text-align:center;">Actividad adicional</th>
+        <th style="text-align:center;">Actividad extraordinaria</th>
+        <th style="text-align:center;">Horario</th>
       </tr>
     </thead>
     <tbody>
@@ -71,8 +71,8 @@
     </tbody>
   </table>
   <footer>
-  <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
-    <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial - V0.03</p>
+    <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
+    <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial</p>
   </footer>
   <button id="print-button">🗂️Imprimir Organización Semanal </button>
   
