--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
   <table class="table-responsive">
     <thead>
       <tr>
-        <th style="text-align:center;">Día</th>
-        <th style="text-align:center;">Fecha del Servicio</th>
-        <th style="text-align:center;">Quién dirige</th>
-        <th style="text-align:center;">Alabanza & Adoracion</th>
-        <th style="text-align:center;">Meditación de la Palabra</th>
-        <th style="text-align:center;">Actividad adicional</th>
-        <th style="text-align:center;">Actividad extraordinaria</th>
-        <th style="text-align:center;">Horario</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Día</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Fecha del Servicio</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Quién dirige</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Alabanza & Adoracion</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Meditación de la Palabra</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Actividad adicional</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Actividad extraordinaria</th>
+        <th style="text-align:center; background-color: #f2f2f2;">Horario</th>
       </tr>
     </thead>
     <tbody>
@@ -75,12 +75,6 @@
     <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial</p>
   </footer>
   <button id="print-button">🗂️Imprimir Organización Semanal </button>
-  
-  <div class="watermark">CRISTO VIVE</div>
-  <script>
-    // Obtener una referencia al botón de imprimir
-    var printButton = document.getElementById('print-button');
-    var watermark = document.querySelector('.watermark');
   
     // Agregar un controlador de eventos para el clic en el botón de imprimir
     printButton.addEventListener('click', function() {
