--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   </table>
   <footer>
     <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
-    <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial</p>
+    <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial - Version 0.0.5</p>
   </footer>
   <button id="print-button">🗂️Imprimir Organización Semanal </button>
   
