--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial - Version 0.0.5</p>
   </footer>
   <button id="print-button">🗂️Imprimir Organización Semanal </button>
-  
+   <script>
     // Agregar un controlador de eventos para el clic en el botón de imprimir
     printButton.addEventListener('click', function() {
       // Ocultar el botón de imprimir
