--- a/index.html
+++ b/index.html
@@ -13,7 +13,21 @@
     <h3>Archivo Generado el día:</h3>
     <h3 id="today"></h3>
   </header>
-
+<style>
+    table {
+        border-collapse: collapse;
+        width: 100%;
+    }
+    
+    table td {
+        border: 1px solid black;
+        padding: 8px;
+    }
+    
+    table td:first-child {
+        font-weight: bold;
+    }
+</style>
   <table class="table-responsive">
     <thead>
       <tr>
