--- a/index.html
+++ b/index.html
@@ -8,9 +8,17 @@
 <body>
   <header>
     <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
-    <h1>Organización Semanal - Cristo Vive</h1>
-    <h2>Responsabilidades de Líderes</h2>
-    <h3>Archivo Generado el día:</h3>
+<style>
+    h1, h2, h3 {
+        text-align: center;
+        font-size: 18px;
+    }
+</style>
+
+<h1>Organización Semanal - Cristo Vive</h1>
+<h2>Responsabilidades de Líderes</h2>
+<h3>Archivo Generado el día:</h3>
+
     <h3 id="today"></h3>
   </header>
 <style>
