--- a/index.html
+++ b/index.html
@@ -6,8 +6,21 @@
   <title>Organización Semanal - Cristo Vive</title>
 </head>
 <body>
-  <header>
+<style>
+    header {
+        text-align: center;
+    }
+    
+    header img {
+        width: 100px;
+        height: auto;
+    }
+</style>
+
+<header>
     <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
+</header>
+
 <style>
     h1, h2, h3 {
         text-align: center;
