--- a/index.html
+++ b/index.html
@@ -114,6 +114,9 @@
     </table>
 </div>
 </footer>
+<p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
+ <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial</p>
+  </footer>
   <button id="print-button">🗂️Imprimir Organización Semanal </button>
   
   <div class="watermark">CRISTO VIVE</div>
