--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 </div>
 </footer>
 <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
- <p>&copy; Equipo queso blanco - Cristo Vive Multimedia Confidencial</p>
+ <p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V1.0.1.1</p>
   </footer>
-  <button id="print-button">🗂️Imprimir Organización Semanal </button>
+  <button id="print-button">🗂️Imprimir PDF - Organización Semanal </button>
   
-  <div class="watermark">CRISTO VIVE</div>
+  <div class="watermark">Iglesia Cristo Vive</div>
   <script>
     // Obtener una referencia al botón de imprimir
     var printButton = document.getElementById('print-button');
