--- a/index.html
+++ b/index.html
@@ -1,9 +1,23 @@
-<!DOCTYPE html>
-<html>
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organización Semanal - Cristo Vive</title>
+  <style>
+    table {
+      max-width: 100%;
+      margin: 0 auto;
+    }
+    
+    table td, table th {
+      white-space: nowrap;
+    }
+    
+    @media (max-width: 768px) {
+      table {
+        width: 100%;
+      }
+    }
+  </style>
 </head>
 <body>
 <style>
