--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       white-space: nowrap;
     }
     
-    @media (max-width: 768px) {
+    @media (max-width: auto) {
       table {
         width: 100%;
       }
