I want to make the table bigger. The days should be at the top and the rest on the left side. I would also like to create a popup fill method to make it easier to enter data in the table. Please add material design. The operation of the printing of the pdf, logo, titles, and footer should not be touched. I will use the supplied code for the improvements. Everything is based on HTML.
Here are the specific changes that I would make to the table:

I would increase the width of the table to make it easier to read.
I would move the days to the top of the table and the rest of the data to the left side. This would make it easier to scan the table and find the information that I am looking for.
I would create a popup fill method that would allow me to enter data in the table without having to scroll up and down. This would make it easier to enter large amounts of data.
I would add material design to the table to make it look more modern and professional.
I would not touch the operation of the printing of the pdf, logo, titles, or footer. These elements are important for the overall look and feel of the table.

--- a/index.html
+++ b/index.html
@@ -4,10 +4,9 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Organización Semanal - Cristo Vive</title>
-</head>
-<body>
-<body>
-<style>
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
+  <style>
     header {
         text-align: center;
     }
@@ -16,26 +15,12 @@
         width: 100px;
         height: auto;
     }
-</style>
-
-<header>
-    <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
-</header>
-
-<style>
+    
     h1, h2, h3 {
         text-align: center;
         font-size: 18px;
     }
-</style>
 
-<h1>Organización Semanal - Cristo Vive</h1>
-<h2>Responsabilidades de Líderes</h2>
-<h3>Archivo Generado el día:</h3>
-
-    <h3 id="today"></h3>
-  </header>
-<style>
     .table-responsive {
         display: block;
         width: 100%;
@@ -54,94 +39,150 @@
         text-align: center;
         background-color: #f2f2f2;
     }
-</style>
 
-<div class="table-responsive">
+    .modal {
+      width: 75% !important;
+      max-height: 90% !important;
+    }
+  </style>
+</head>
+<body>
+  <header>
+    <img src="https://i.ibb.co/YLLzsJ8/tcvl-121x107.webp" alt="tcvl-121x107" border="0">
+  </header>
+
+  <h1>Organización Semanal - Cristo Vive</h1>
+  <h2>Responsabilidades de Líderes</h2>
+  <h3>Archivo Generado el día:</h3>
+  <h3 id="today"></h3>
+
+  <div class="table-responsive">
     <table>
-        <thead>
-            <tr>
-                <th>Día</th>
-                <th>Fecha del Servicio</th>
-                <th>Quién dirige</th>
-                <th>Alabanza & Adoracion</th>
-                <th>Meditación de la Palabra</th>
-                <th>Actividad adicional</th>
-                <th>Actividad extraordinaria</th>
-                <th>Horario</th>
-            </tr>
-        </thead>
-        <tbody>
-            <tr>
-                <td>Martes</td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>Viernes</td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>Sábado</td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-            </tr>
-            <tr>
-                <td>Domingo</td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-                <td contenteditable="true"></td>
-            </tr>
-        </tbody>
+      <thead>
+        <tr>
+          <th></th>
+          <th class="center-align">Martes</th>
+          <th class="center-align">Viernes</th>
+          <th class="center-align">Sábado</th>
+          <th class="center-align">Domingo</th>
+        </tr>
+      </thead>
+      <tbody>
+        <tr>
+          <td class="center-align">Fecha del Servicio</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td class="center-align">Quién dirige</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td class="center-align">Alabanza & Adoracion</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td class="center-align">Meditación de la Palabra</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td class="center-align">Actividad adicional</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td class="center-align">Actividad extraordinaria</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+        <tr>
+          <td class="center-align">Horario</td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+          <td contenteditable="true"></td>
+        </tr>
+      </tbody>
     </table>
-</div>
-</footer>
-<p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
- <p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V1.0.1.1</p>
-  </footer>
-  <button id="print-button">🗂️Imprimir PDF - Organización Semanal </button>
-  
+  </div>
+  <p>"Lo que es, ya ha sido, y lo que será, ya fue, y Dios busca lo que ha pasado.</p>
+  <p>&copy; Equipo Cristo Vive Multimedia Confidencial 🔒V1.0.1.1</p>
+<button id="print-button">🗂️Imprimir PDF - Organización Semanal </button>
+
   <div class="watermark">Iglesia Cristo Vive</div>
+  <!-- Modal Structure -->
+  <div id="data-modal" class="modal">
+    <div class="modal-content">
+      <h4>Ingresa los datos</h4>
+      <div class="input-field">
+        <input id="modal-input" type="text" class="validate">
+        <label for="modal-input">Datos</label>
+      </div>
+    </div>
+    <div class="modal-footer">
+      <a href="#!" class="modal-close waves-effect waves-green btn-flat">Guardar</a>
+    </div>
+  </div>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
   <script>
-    // Obtener una referencia al botón de imprimir
+    // Initialize modal
+    document.addEventListener('DOMContentLoaded', function() {
+      var elems = document.querySelectorAll('.modal');
+      var instances = M.Modal.init(elems);
+    });
+
+    // Open modal on cell click
+    var cells = document.querySelectorAll('td[contenteditable="true"]');
+    cells.forEach(function(cell) {
+      cell.addEventListener('click', function() {
+        var modalInput = document.getElementById('modal-input');
+        modalInput.value = cell.innerText;
+        var modalInstance = M.Modal.getInstance(document.getElementById('data-modal'));
+        modalInstance.open();
+        modalInput.focus();
+      });
+    });
+
+    // Save modal data to cell
+    var modalSaveButton = document.querySelector('.modal-close');
+    modalSaveButton.addEventListener('click', function() {
+      var modalInput = document.getElementById('modal-input');
+      var activeCell = document.querySelector('td[contenteditable="true"]:focus');
+      activeCell.innerText = modalInput.value;
+    });
+
+    // Get today's date
+    var todayElement = document.getElementById('today');
+    var today = new Date();
+    todayElement.textContent = 'Fecha actual: ' + today.toLocaleDateString();
+
+    // Print button functionality
     var printButton = document.getElementById('print-button');
     var watermark = document.querySelector('.watermark');
   
-    // Agregar un controlador de eventos para el clic en el botón de imprimir
     printButton.addEventListener('click', function() {
-      // Ocultar el botón de imprimir
       printButton.style.display = 'none';
-      // Ocultar la marca de agua
       watermark.style.display = 'none';
   
-      // Llamar a la función de impresión del navegador
       window.print();
   
-      // Restaurar la visibilidad del botón de imprimir y la marca de agua después de imprimir
       printButton.style.display = 'block';
-                });
-                var todayElement = document.getElementById('today');
- var today = new Date();
-todayElement.textContent = 'Fecha actual: ' + today.toLocaleDateString();
-            </script>
-            </body>
-            </html>
+    });
+  </script>
+</body>
+</html>
